<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">SmartHomeSystem</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
	<string name="deleteuser">Delete User</string>
	<string name="email">E-mail</string>
	<string name="edituser">Edit User</string>
	<string name="modnum">Module Number</string>
	<string name="location">Location</string>
	<string name="motcon">Motion Controlled</string>
	<string name="delmod">Delete Module</string>
	<string name="description">List of Current Users, Click a User to modify. The user at the top of the list is the master user.</string>
	<string name="sendlogin">Send Login Info</string>
	<string name="updatestatus">Update Status</string>
	<string name="addmod">Add Mod</string>
	<string name="tapdesc">Tap a module to switch its state, click and hold a module to edit details.</string>
	<string name="submit">Submit</string>
	<string name="nologin">You are currently not logged in.</string>
	<string name="login">Log on</string>
	<string name="logout">Log out</string>
	<string name="name">Name</string>
	<string name="editinfo">Edit Current Users</string>
	<string name="reginfo">Register User Info</string>
	<string name="useradmin">User Administration</string>
	<string name="homestatus">Home Status</string>
</resources>