<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    
	    <Button
        android:id="@+id/flloginback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/back" />

    	<Button
        android:id="@+id/flloginhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/home" />
	</RelativeLayout>
	
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center"
	    >
    	
        <TextView
	        android:id="@+id/flemailtext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/email" 
	        android:layout_centerHorizontal="true"
	        android:layout_alignParentTop="true"
	        />

	    <EditText
	        android:id="@+id/flemailedit"
	        android:layout_width="175dp"
	        android:layout_height="wrap_content" 
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/flemailtext"
	        android:inputType="text"
	        />

	    <Button
	        android:id="@+id/flsendlogin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/flemailedit"
	        android:text="@string/sendlogin" />
	    
	</RelativeLayout>

</LinearLayout>